ADD: '/user/register' endpoint document on swagger
